<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_fingerprint</name>
  <version>0.6.2</version>
  <description>The system_fingerprint package</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD 2-clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <depend>roslib</depend>
  <depend>rosnode</depend>
  <depend>rospy</depend>
  <depend>rosservice</depend>
  <exec_depend>python3-git</exec_depend>
  <test_depend>rostest</test_depend>
</package>
